# Admob4Kivy

./: pyproject.toml
backends/a4k_pyjnius/: .gitignore  pyproject.toml
src/admob4kivy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
